# bazel-monorepo

./: .bazelrc  .eslintrc.js  .flowconfig  .gitignore  .prettierignore  BUILD.bazel  WORKSPACE  WORKSPACE.bazel  babel.config.js  package.json  prettier.config.js
babel/: babel.bzl
jest/: jest.bzl  (+5 more)
src/app1/: BUILD.bazel  package.json  webpack.config.js
src/app1/src/: index.html  index.js
src/components/: BUILD.bazel  jest.config.js  package.json
src/components/.storybook/: main.js  preview-head.html  preview.js  webpack.config.js
src/components/mocks/: svgFileMock.js
src/components/scripts/: generateDisplay.js  generateSpacing.js
src/components/src/: alert.js  breakpoints.js  form-group.js  heading.js  index.js  link.js  navbar.js  tbergq-components.css  text.js  theme.css  use-match-media.js
src/components/src/alert/: alert.js  alert.module.css  alert.stories.js
src/components/src/box/: box.js  box.stories.js
src/components/src/button/: button.js  button.module.css  button.stories.js  icon-button.js  icon-button.stories.js
src/components/src/card/: card.css  card.js  card.stories.js
src/components/src/confirm/: confirm.js  confirm.stories.js
src/components/src/form-group/: form-group.js
src/components/src/heading/: heading.css  heading.js  heading.stories.js
src/components/src/input/: input.js  input.module.css  input.stories.js
src/components/src/link-list/: link-list.js  link-list.module.css  link-list.stories.js
src/components/src/modal/: modal.css  modal.js  modal.module.css  modal.stories.js
src/components/src/navbar/: navbar.css  navbar.js  navbar.module.css  navbar.stories.js
src/components/src/select/: select.js  select.module.css  select.stories.js
src/components/src/spinner/: spinner.css  spinner.js  spinner.module.css  spinner.stories.js
src/components/src/toast/: toast-content.js  toast-list-state.js  toast.css  toast.js  toast.module.css  toast.stories.js
src/components/src/utilities/: display.css  ellipsis.module.css  flex.css  flex.module.css  spacing.css  text-align.css  text-align.module.css  underline.css
src/mock-server/: BUILD.bazel  package.json
src/mock-server/src/: create-mock-server.js  handler.js  index.js
src/redis-client/: BUILD.bazel  package.json
src/redis-client/src/: create-client.js  index.js
src/router/: BUILD.bazel  README.md  package.json
src/router/src/: ErrorBoundary.js  JSResource.js  Link.js  RouterRenderer.css  RouterRenderer.js  RoutingContext.js  createRouter.js  getMockHistory.js  index.js  useHistory.js  usePreloadRoute.js
src/server_test/: BUILD.bazel  package.json
src/server_test/src/: index.html  index.js
src/team-assistant/: .babelrc.js  .eslintrc.js  .gitignore  .source_strings.json  .src_manifest.json  BUILD.bazel  dependencies.bzl  jest.config.js  package.json  relay.config.js  schema.graphql  translatedFbts.json  vercel.json  webpack.config.js
src/team-assistant-gql/: BUILD.bazel  dependencies.bzl  jest.config.js  package.json  schema.graphql  vercel.json
src/team-assistant-gql/scripts/: setup-env-vars.js  setup-jest.js  test-bc.js
src/team-assistant-gql/src/: RootQuery.js  Schema.js  app.js  context.js  index.js  root-mutation.js  root-query.js  schema.js
src/team-assistant-gql/src/__tests__/: app.test.js
src/team-assistant-gql/src/database/: connection.js
src/team-assistant-gql/src/middleware/: auth.js
src/team-assistant/scripts/: deploy.js  setupJest.js
src/team-assistant/src/: app.css  index.js
src/team-assistant/src/components/: app.js  get-language.js  router.js  use-inject-sx-styles.js  use-is-logged-in.js  yup-locale.js
src/team-assistant/src/dashboard/: dashboard.js
src/team-assistant/src/home/: home.js
src/team-assistant/src/relay/: environment.js  with-use-query.js
src/team-assistant/src/utils/: consts.js  test-renderer.js
src/team-assistant/translations/: es-PE.json  nb-NO.json
src/trainingjournal/: .babelrc.js  .source_strings.json  .src_manifest.json  BUILD.bazel  alias.js  dependencies.bzl  jest.config.js  package.json  translatedFbts.json  vercel.json  webpack.config.js
src/trainingjournal-gql/: .babelrc.js  BUILD.bazel  dependencies.bzl  jest.config.js  package.json  schema.graphql  vercel.json
src/trainingjournal-gql/scripts/: setup-env-vars.js  setup-jest.js  test-bc.js
src/trainingjournal-gql/src/: index.js
src/trainingjournal-gql/src/application/: app.js  index.js  schema.js
src/trainingjournal-gql/src/domain/: day.js  program.js
src/trainingjournal-gql/src/infrastructure/: connection.js
src/trainingjournal/mocks/: create-exercise.js  create-week.js  fetch-base-exercises.js  fetch-program.js  handlers.js  login-handler.js  server.js  svgFileMock.js
src/trainingjournal/mocks/exercise/: delete-exercise.js  edit-exercise.js  index.js
src/trainingjournal/mocks/program/: create-program.js  fetch-program.js  fetch-programs.js  index.js
src/trainingjournal/mocks/register/: day-register.js  index.js
src/trainingjournal/mocks/responses/: index.js
src/trainingjournal/scripts/: set-env-vars.js  setup-jest.js
src/trainingjournal/src/: app.css  index.html  index.js
src/trainingjournal/src/components/: app.css  app.js  back-button.js  get-language.js  login-context.js  navbar.js  react-query-devtools.js  router.js
src/trainingjournal/src/exercises/: exercises.js
src/trainingjournal/src/home/: home-link.css  home-link.js  home.css  home.js
src/trainingjournal/src/landing/: landing-page.css  landing-page.js
src/trainingjournal/src/login/: api.js  login-form.js  login.js
src/trainingjournal/src/program/: delete-program.js  program.js  programs.js  types.js
src/trainingjournal/src/register/: register.js  types.js
src/trainingjournal/src/relay/: environment.js
src/trainingjournal/src/services/: constants.js  fetch.js  use-is-logged-in.js
src/trainingjournal/test-utils/: render.js
src/trainingjournal/translations/: nb-NO.json
src/webpack-config/: BUILD.bazel  package.json
src/webpack-config/src/: index.js  webpack.base.js
theme/: BUILD.bazel  package.json  test.bzl
theme/src/: index.js
(+385 files in other folders)
