load("@npm//@babel/cli:index.bzl", "babel")
load(":test.bzl", "get_folder_name")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

[
    babel(
    name = get_folder_name(extension),
    data = [
        "//theme:src", 
        "@//:babel.config.js",
        "//:package.json",
        ":package.json",
        "@npm//@adeira/babel-preset-adeira"
    ],
    output_dir = True,
    args = [
      "./theme",
        "--out-dir",
        "$(@D)",
        "--out-file-extension",
        extension,
        "--copy-files",
    ],
)
    for extension in [
        ".mjs",
        ".js.flow",
        ".js",
    ]
]
