load("@npm//http-server:index.bzl", "http_server")
load("@npm//webpack-cli:index.bzl", "webpack_cli")

webpack_cli(
    name = "compile",
    output_dir = True,
    args = [
        "$(execpath src/index.js)",
        "--config",
        "$(execpath webpack.config.js)",
        "--output-path",
        "$(@D)",
        "--mode",
        "development"
    ],
    data = [
        ":src/index.js",
        ":webpack.config.js",
        "//:babel.config.js",
        "@npm//html-webpack-plugin",
        "@npm//clean-webpack-plugin",
        "@npm//babel-loader",
        "@npm//@adeira/babel-preset-adeira",
        "@npm//react",
        "@npm//react-dom",
        "@npm//style-loader",
        "@npm//css-loader",
        "@npm//@svgr/webpack",
        "@npm//@adeira/sx",
        "@npm//@babel/runtime",
        "@npm//shortid",
        "@npm//recoil",
        "//src/components:components",
    ],
)

http_server(
    name = "server",
    data = [
        ":compile"
    ],
    args = ["src/app1/compile/","-o"],
)
