load("@npm//http-server:index.bzl", "http_server")
load("@npm//webpack-cli:index.bzl", "webpack_cli")

webpack_cli(
    name = "compile",
    args = [
        "$(execpath src/index.js)",
        "--config",
        "$(execpath webpack.config.js)",
        "--output-path",
        "$(@D)",
        "--mode",
        "development",
    ],
    data = [
        ":src/index.js",
        ":webpack.config.js",
        "//:babel.config.js",
        "//src/components",
        "@npm//@adeira/babel-preset-adeira",
        "@npm//@adeira/sx",
        "@npm//@babel/runtime",
        "@npm//@svgr/webpack",
        "@npm//babel-loader",
        "@npm//clean-webpack-plugin",
        "@npm//css-loader",
        "@npm//html-webpack-plugin",
        "@npm//react",
        "@npm//react-dom",
        "@npm//recoil",
        "@npm//shortid",
        "@npm//style-loader",
    ],
    output_dir = True,
)

http_server(
    name = "server",
    args = [
        "src/app1/compile/",
        "-o",
    ],
    data = [
        ":compile",
    ],
)
