load("@npm//@babel/cli:index.bzl", "babel")
load("@build_bazel_rules_nodejs//internal/js_library:js_library.bzl", "js_library")
load("//jest:jest.bzl", "jest_test")

babel(
  name = "lib",
  output_dir = True,
  args = [
    "./src/components/src",
    "--out-dir",
    "$(@D)",
    "--copy-files",
    "--root-mode",
    "upward",
  ],
  data = [
    ":src",
    ":package.json",
    "//:package.json",
    "//:babel.config.js",
    "@npm//@adeira/babel-preset-adeira"
  ],
)

babel(
  name = "esm",
  output_dir = True,
  args = [
    "./src/components/src",
    "--out-dir",
    "$(@D)",
    "--root-mode",
    "upward",
    "--out-file-extension",
    ".mjs"
  ],
  data = [
    ":src",
    ":package.json",
    "//:package.json",
    "//:babel.config.js",
    "@npm//@adeira/babel-preset-adeira"
  ],
)

js_library(
    name = "components",
    package_name = "@tbergq/components",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
    deps = [":esm", ":lib"],
)

jest_test(
  name = "test",
   srcs = [
    "//:babel.config.js",
  ] + glob(["src/**/*.js", "mocks/*.js"]),
  jest_config = ":jest.config.js",
  deps = [
     "@npm//@adeira/babel-preset-adeira",
      "@npm//@jest/transform",
      "@npm//babel-jest",
      "@npm//react",
      "@npm//@adeira/sx",
      "@npm//shortid",
      "@npm//recoil",
      "@npm//@testing-library/react",
      "@npm//@testing-library/user-event",
      "@npm//@testing-library/jest-dom",
      "//jest:preset"
  ]
)
