load("@build_bazel_rules_nodejs//internal/js_library:js_library.bzl", "js_library")
load("@npm//@storybook/react:index.bzl", "start_storybook")
load("//:babel/babel.bzl", "babel_build")
load("//:eslint/eslint.bzl", "eslint")
load("//jest:jest.bzl", "jest_test")

babel_build(
    name = "compile",
    data = [
        ":package.json",
        ":src",
        "//:babel.config.js",
        "//:package.json",
        "@npm//@adeira/babel-preset-adeira",
        "@npm//react-transition-group",
    ],
    file_path = "./src/components/src",
)

js_library(
    name = "components",
    package_name = "@tbergq/components",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
    deps = [
        ":esm",
        ":lib",
        "@npm//react-transition-group",
    ],
)

jest_test(
    name = "test",
    srcs = [
        "//:babel.config.js",
    ] + glob([
        "src/**/*.js",
    ]),
    jest_config = ":jest.config.js",
    deps = [
        "//jest:preset",
        "@npm//@adeira/babel-preset-adeira",
        "@npm//@adeira/sx",
        "@npm//@babel/runtime",
        "@npm//@jest/transform",
        "@npm//@testing-library/jest-dom",
        "@npm//@testing-library/react",
        "@npm//@testing-library/user-event",
        "@npm//babel-jest",
        "@npm//react",
        "@npm//react-transition-group",
        "@npm//recoil",
        "@npm//shortid",
    ],
)

eslint(
    name = "lint",
    data = [":src"],
    entry = ":src",
)

start_storybook(
    name = "storybook",
    args = [
        "-c",
        "$(execpath .storybook)",
        "-p",
        "6006",
    ],
    data = glob([
        "**/*.js",
        "**/*.svg",
        "**/*.css",
    ]) + [
        ":.storybook",
        ":package.json",
        "//:babel.config.js",
        "//:package.json",
        "@npm//@adeira/babel-preset-adeira",
    ],
)
