load("@build_bazel_rules_nodejs//internal/js_library:js_library.bzl", "js_library")
load("//:babel/babel.bzl", "babel_build")
load("//:eslint/eslint.bzl", "eslint")

babel_build(
    name = "compile",
    data = [
        ":package.json",
        ":src",
        "//:babel.config.js",
        "@npm//@adeira/babel-preset-adeira",
    ],
    file_path = "./src/mock-server/src",
)

js_library(
    name = "mock_server",
    package_name = "@tbergq/mock-server",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
    deps = [
        ":esm",
        ":lib",
        "@npm//msw",
    ],
)

eslint(
    name = "lint",
    data = [":src"],
    entry = ":src",
)
