load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("@build_bazel_rules_nodejs//internal/js_library:js_library.bzl", "js_library")
load("//:babel/babel.bzl", "babel_build")
load("//:eslint/eslint.bzl", "eslint")

babel_build(
    name = "lib",
    data = [
        ":package.json",
        ":src",
        "//:babel.config.js",
        "//:package.json",
        "@npm//@adeira/babel-preset-adeira",
    ],
    file_path = "./src/redis-client/src",
)

js_library(
    name = "redis_client",
    package_name = "@tbergq/redis-client",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
    deps = [
        ":esm",
        ":lib",
    ],
)

eslint(
    name = "lint",
    data = [":src"],
    entry = ":src",
)

pkg_npm(
    name = "redis_client_npm",
    srcs = ["package.json"],
    deps = [":redis_client"],
)
