load("@build_bazel_rules_nodejs//internal/js_library:js_library.bzl", "js_library")
load("@npm//@babel/cli:index.bzl", "babel")
load("//:eslint/eslint.bzl", "eslint")

babel(
    name = "lib",
    args = [
        "./src/router/src",
        "--out-dir",
        "$(@D)",
        "--copy-files",
        "--root-mode",
        "upward",
    ],
    data = glob([
        "src/**/*.js",
        "src/**/*.css",
    ]) + [
        ":package.json",
        "//:babel.config.js",
        "//:package.json",
        "@npm//@adeira/babel-preset-adeira",
    ],
    output_dir = True,
)

babel(
    name = "esm",
    args = [
        "./src/router/src",
        "--out-dir",
        "$(@D)",
        "--copy-files",
        "--root-mode",
        "upward",
        "--out-file-extension",
        ".mjs",
    ],
    data = glob([
        "src/**/*.js",
        "src/**/*.css",
    ]) + [
        ":package.json",
        "//:babel.config.js",
        "//:package.json",
        "@npm//@adeira/babel-preset-adeira",
    ],
    output_dir = True,
)

js_library(
    name = "router",
    package_name = "@tbergq/router",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
    deps = [
        ":esm",
        ":lib",
        "@npm//history",
        "@npm//react-router-config",
    ],
)

eslint(
    name = "lint",
    data = [":src"],
    entry = ":src",
)
