load("@build_bazel_rules_nodejs//internal/js_library:js_library.bzl", "js_library")
load("//:babel/babel.bzl", "babel_build")
load("//:eslint/eslint.bzl", "eslint")

babel_build(
    name = "lib",
    data = glob([
        "src/**/*.js",
        "src/**/*.css",
    ]) + [
        ":package.json",
        "//:babel.config.js",
        "@npm//@adeira/babel-preset-adeira",
    ],
    file_path = "./src/router/src",
)

js_library(
    name = "router",
    package_name = "@tbergq/router",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
    deps = [
        ":esm",
        ":lib",
        "@npm//history",
        "@npm//react-router-config",
    ],
)

eslint(
    name = "lint",
    data = [
        ":package.json",
        ":src",
    ],
    entry = ":src",
)
