load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@babel/cli:index.bzl", "babel")

babel(
    name = "lib",
    args = [
        "./src/server_test/src",
        "--out-dir",
        "$(@D)",
        "--root-mode",
        "upward",
        "--copy-files",
    ],
    data = glob(["src/*"]) + [
        ":package.json",
        "//:package.json",
        "//:babel.config.js",
        "@npm//@adeira/babel-preset-adeira",
    ],
    output_dir = True,
)

nodejs_binary(
    name = "server",
    data = [
        ":lib",
        "@npm//@babel/runtime",
    ],
    entry_point = ":lib",
)
