load("@npm//http-server:index.bzl", "http_server")
load("@npm//webpack-cli:index.bzl", "webpack_cli")
load("//jest:jest.bzl", "jest_test")
load("@npm//webpack-dev-server:index.bzl", "webpack_dev_server")
load(":dependencies.bzl", "get_deps")

webpack_cli(
    name = "compile",
    output_dir = True,
    args = [
        "$(execpath src/index.js)",
        "--config",
        "$(execpath webpack.config.js)",
        "--output-path",
        "$(@D)",
        "--mode",
        "production",
    ],
    data = glob(["**/*.js", "**/*.json"]) + get_deps() + [
        ":src/app.css",
        "//:babel.config.js",
        ":.babelrc.js",
    ],
)

http_server(
    name = "server",
    data = [
        ":compile"
    ],
    args = ["src/team-assistant/compile/","-o", "-p", "9000"],
)

jest_test(
  name = "test",
  srcs = [
    "//:babel.config.js",
    ":.babelrc.js",
    ":scripts/setup-jest.js",
  ] + glob(["src/**/*.js", "mocks/*.js", "**/*.json"]),
  jest_config = ":jest.config.js",
  tags = [
        # Need to set the pwd to avoid jest needing a runfiles helper
        # Windows users with permissions can use --enable_runfiles
        # to make this test work
        "no-bazelci-windows",
        # TODO: why does this fail almost all the time, but pass on local Mac?
        "no-bazelci-mac",
    ],
    deps = get_deps() + [
        "@npm//relay-test-utils",
        "@npm//@testing-library/react",
        "@npm//@testing-library/user-event",
        "@npm//@testing-library/jest-dom",
        "//jest:preset",
    ],
)


webpack_dev_server(
    name = "dev_server",
    data = glob(["**/*.js", "**/*.json"]) + get_deps() + [
        ":src/app.css",
        "//:babel.config.js",
        ":.babelrc.js",
    ],
    args = [
        "--entry",
        "./src/team-assistant/src/index.js",
        "--config",
        "$(execpath webpack.config.js)",
        "--port",
        "9000",
        "--hot",
        "--watch-poll"
    ]
)
